LPS-92852 Fixed the vertical alignment of the portlet-topper

--- a/modules/apps/frontend-theme/frontend-theme-classic/src/css/portlet/_portlet.scss
+++ b/modules/apps/frontend-theme/frontend-theme-classic/src/css/portlet/_portlet.scss
@@ -26,7 +26,7 @@
 	}
 
 	.portlet-title-default {
-		line-height: 1.4;
+		line-height: 1.5rem;
 	}
 
 	.portlet-name-text {
@@ -35,13 +35,12 @@
 
 	.portlet-topper-toolbar, .icon-monospaced {
 		height: 1.5rem;
-		line-height: 1.4;
+		line-height: 1.5rem;
 		width: 1.5rem;
 	}
 
 	.lexicon-icon {
 		height: 0.875rem;
-		margin-top: 0;
 		width: 0.875rem;
 	}
 }
